index.html.erbとcss、ルーティングを整える

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Nostalgia</title>
+    <title>nostalgia</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,6 +10,21 @@
   </head>
 
   <body>
+    <header class="header">
+      <div class="header__bar row">
+        <h1 class="grid-6"><a href="/">nostalgia</a></h1>
+        <div class="user_nav grid-6">
+          <a class="post" href="/items/new">投稿する</a>
+          <%# urlを指定する %>
+        </div>
+      </div>
+    </header> 
     <%= yield %>
+    <footer>
+      <p>
+       Copyright nostalgia 2020.
+      </p>
+    </footer>
   </body>
 </html>
+<%# ヘッダーの変わらない部分を作成/レイアウトテンプレート %>
