--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,6 +1,17 @@
 <div class="contents row">
   <% @items.each do |item| %>
     <div class="content_post" style="background-image: url(<%= item.image %>);">
+      <div class="more">
+        <span><%= image_tag 'arrow_top.png'%></span>
+        <ul class="more_list">
+          <li>
+            <%= link_to'削除', "/items/#{item.id}", method: :delete %>
+            <%# /items/《itemのid》というパス %>
+            <%# HTTPメソッドは、DELETEというHTTPメソッド %>
+            <%# methodオプションにシンボルで:delete %>
+          </li>
+        </ul> 
+       </div>    
       <p><%= item.text %></p>
       <span class="name">
         <%= item.name %>
