投稿者名をビューで表示

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -21,10 +21,11 @@
        </div>    
       <p><%= item.text %></p>
       <span class="name">
-        <%= item.name %>
+         <a href="/users/<%= item.user.id %>">
+          <span>投稿者</span><%= item.user.nickname %>
+        </a>
       </span>
     </div>
   <% end %>  
 </div>
-
 
