--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,21 +1,25 @@
-<div class="contents row">
+<div class ="contents row">
   <div class="content_post" style="background-image: url(<%= @item.image %>);">
     <div class="more">
       <span><%= image_tag 'arrow_top.png' %></span>
-      <ul class="more">
+      <ul class="more_list">
         <li>
-          <%= link_to '編集', edit_item_path(@item.id), method: :get%>
+          <%= link_to '編集', edit_item_path(@item.id), method: :get %>
         </li>
         <li>
-          <% link_to '削除', item_path(@item.id), method: :delete %>
+          <%= link_to '削除', item_path(@item.id), method: :delete %>
         </li>
       </ul>
     </div>
     <p><%= @item.text %></p>
-    <span class="name"><%@item.name%>
+    <span class="name">
+      <a href="/users/<%= @item.user.id %>">
+        <span>投稿者</span><%= @item.user.nickname %>
+      </a>
     </span>
   </div>
 </div>
+
 
 
 
