--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,5 +1,6 @@
 <div class ="contents row">
   <div class="content_post" style="background-image: url(<%= @item.image %>);">
+   <% if user_signed_in? && current_user.id == @item.user_id %>
     <div class="more">
       <span><%= image_tag 'arrow_top.png' %></span>
       <ul class="more_list">
@@ -11,6 +12,7 @@
         </li>
       </ul>
     </div>
+  <% end %>
     <p><%= @item.text %></p>
     <span class="name">
       <a href="/users/<%= @item.user.id %>">
