--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,10 +1,6 @@
 <div class="contents row">
   <div class="container">
     <h3>投稿する</h3>
-    <%= form_with(model: @item, local: true) do |form| %>
-      <%= form.file_field :image %>
-      <%= form.text_area :text, placeholder: "text", rows: "10" %>
-      <%= form.submit "SEND" %>
-    <% end %>
+    <%= render partial: "form", locals: { item: @item } %>
   </div>
 </div>
