--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,6 @@
 <div class="contents row">
   <p><%= @nickname %>さんの投稿一覧</p>
   <% @items.each do |item| %>
-    <div class="content_post" style="background-image: url(<%= item.image %>);">
-      <p><%= item.text %></p>
-    </div>
+    <%= render partial: "items/item", locals: { item: item } %>
   <% end %>
 </div>
