保存した画像を表示させる

--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,4 +1,9 @@
-  <div class="content_post" style="background-image: url(<%= item.image %>);">
+  <div class="content_post" style="background-image: url(<%= Rails.application.routes.url_helpers.url_for(item.image) if item.image.attached?  %>);">
+      <%# <%= image_tag item.image ,class: 'item-image' if item.image.attached?  %> 
+      <%# <%= image_tag message.image, class: 'message-image' if message.image.attached? %> 
+      <%# attached?メソッド レコードにファイルが添付されているかどうか モデル.ファイル名.attached? %>
+        <%# image_tagメソッド img要素を生成するRailsのヘルパーメソッド  %>
+        <%# image_tagメソッドでは、複雑なRailsのディレクトリパスを指定しなくても、モデルから画像ファイルを呼び出して引数に記述するだけで、画像を表示するimg要素を生成 %>
       <div class="more">
         <span><%= image_tag 'arrow_top.png'%></span>
         <ul class="more_list">
