--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,4 +1,5 @@
 <div class ="contents row">
+  <%# <div class="content_post" style="background-image: url(<%= image_tag item.image ,class: 'item-image' if item.image.attached?  %>);"> %>
   <div class="content_post" style="background-image: url(<%= @item.image %>);">
    <% if user_signed_in? && current_user.id == @item.user_id %>
     <div class="more">
