--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,44 @@
         <% end %>
       </div>
     </header> 
+
+
+    <p>
+    <h3>
+       ログイン設定
+    <br>
+    Email : uroka.yutaro@gmail.com
+    <br>
+    Password : uraoka
+    </h3>
+    <br>
+    概要
+    <br>
+    本アプリケーションは、投稿型SNSアプリケーション
+    <br>
+    過去に手放してしまった洋服や大切な一品を
+    <br>
+    思い出し懐かしめアプリです。
+    <br>
+    <br>
+    心理学に置いて貯金目標と過去を懐かしむ感情を結びつけると
+    <br>
+    貯金額が1年間に64%向上したという統計を聞き、
+    <br>
+    貯金について考えていなかった人の役に立てたいというコンセプトで作成しました。
+    <br>
+    <br>
+    以下の機能を拡張しております。
+    <br>
+    ・投稿した画像の検索（TOPページ、マイページ）
+    <br>
+    ・投稿した画像の削除、編集、詳細確認
+    <br>
+    <br>
+ 
+
+    </p>
+
     <%= yield %>
     <footer>
       <p>
