--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,9 +1,7 @@
-<div class="content_post" >
+<%# <div class="content_post" > %>
 <%# <div class="content_post" style="background-image: url(<%= image_tag(item.image.url) %>
-<%# <div class="content_post" style="background-image: url(<%= Rails.application.routes.url_helpers.url_for(item.image) if item.image.attached?  %>
-    <div class="back-image"> <%= image_tag item.image.variant(resize: '350x400'), class: 'item-image' if item.image.attached? %> </div>
-                             <%# <%= image_tag item.image.variant(resize: '500x500'), class: 'item-image' if item.image.attached? %> 
-      <%# <%= image_tag message.image, class: 'message-image' if message.image.attached? %> 
+<div class="content_post" style="background-image: url(<%= url_for(item.image) %>) ;">
+
       <%# attached?メソッド レコードにファイルが添付されているかどうか モデル.ファイル名.attached? %>
         <%# image_tagメソッド img要素を生成するRailsのヘルパーメソッド  %>
         <%# image_tagメソッドでは、複雑なRailsのディレクトリパスを指定しなくても、モデルから画像ファイルを呼び出して引数に記述するだけで、画像を表示するimg要素を生成 %>
@@ -36,3 +34,4 @@
         </a>
       </span>
     </div>
+
