--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
     <h3>
        ログイン設定
     <br>
-    Email : uroka.yutaro@gmail.com
+    Email : uraoka.yutaro@gmail.com
     <br>
     Password : uraoka
     </h3>
@@ -50,7 +50,7 @@
     <br>
     過去に手放してしまった洋服や大切な一品を
     <br>
-    思い出し懐かしめアプリです。
+    思い出し懐かしめるアプリです。
     <br>
     <br>
     心理学に置いて貯金目標と過去を懐かしむ感情を結びつけると
